// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Component <EventsDetail /> should renders correctly with different state of props 1`] = `
<div
  className="section-detail"
>
  <div
    className="panel-group accordion"
  >
    <EventsDetailPanel
      editedPanel={
        Object {
          "eventPanel": false,
        }
      }
      isBtnShowPanel={true}
      isOpen={false}
      isShowControlPanel={true}
      name="eventPanel"
      title="Event - undefined Details"
    >
      <div
        className="panel-body-inner"
      >
        <div
          className="form"
        >
          <div
            className="form-group-wrapper"
          >
            <div
              className="row-expand"
            >
              <div
                className="col-expand-left"
              >
                <div
                  className="form-group"
                >
                  <label
                    className="control-label"
                  >
                    Event Name
                  </label>
                  <div
                    className="form-control-static"
                  />
                </div>
              </div>
              <div
                className="col-expand-right"
              >
                <div
                  className="form-group"
                >
                  <label
                    className="control-label"
                  >
                    Event Type
                  </label>
                  <div
                    className="form-control-static"
                  />
                </div>
              </div>
            </div>
            <div
              className="row-expand"
            >
              <div
                className="col-expand-left"
              >
                <div
                  className="form-group"
                >
                  <label
                    className="control-label"
                  >
                    Notes
                  </label>
                  <div
                    className="form-control-static"
                  />
                </div>
              </div>
            </div>
            <div
              className="row-expand"
            >
              <div
                className="col-expand-left"
              >
                <div
                  className="form-group"
                >
                  <label
                    className="control-label"
                  >
                    Event Date
                  </label>
                  <div
                    className="form-control-static"
                  >
                    13-Nov-2017 18:00
                  </div>
                </div>
              </div>
              <div
                className="col-expand-right"
              >
                <div
                  className="form-group"
                >
                  <label
                    className="control-label"
                  >
                    Date
                  </label>
                  <div
                    className="form-control-static"
                  >
                    13-Nov-2017
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </EventsDetailPanel>
  </div>
</div>
`;

exports[`Component <EventsDetail /> should renders correctly with different state of props 2`] = `
<div
  className="section-detail"
>
  <div
    className="panel-group accordion"
  >
    <EventsDetailPanel
      editedPanel={
        Object {
          "eventPanel": false,
        }
      }
      isBtnShowPanel={true}
      isOpen={false}
      isShowControlPanel={false}
      name="metaPanel"
      title="Event - undefined Metadata"
    >
      <div
        className="panel-body-inner"
      >
        <div
          className="form"
        >
          <div
            className="form-group-wrapper"
          >
            <div
              className="row-expand"
            >
              <div
                className="col-expand-left"
              >
                <div
                  className="form-group"
                >
                  <label
                    className="control-label"
                  >
                    Author
                  </label>
                  <div
                    className="form-control-static ng-binding"
                  />
                </div>
              </div>
              <div
                className="col-expand-right"
              >
                <div
                  className="form-group"
                >
                  <label
                    className="control-label"
                  >
                    Source
                  </label>
                  <div
                    className="form-control-static ng-binding"
                  />
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </EventsDetailPanel>
  </div>
</div>
`;

exports[`Component <EventsDetail /> should renders correctly with different state of props 3`] = `
<div
  className="section-detail"
>
  <div
    className="panel-group accordion"
  >
    <EventsDetailPanel
      editedPanel={
        Object {
          "eventPanel": false,
        }
      }
      isBtnShowPanel={true}
      isOpen={false}
      isShowControlPanel={false}
      name="chatPanel"
      title="Chat"
    >
      <div
        className="panel-body-inner"
      >
        <div
          className="form"
        >
          <div
            className="form-group-wrapper"
          >
            <div
              className="row-expand"
            />
          </div>
        </div>
      </div>
    </EventsDetailPanel>
  </div>
</div>
`;

exports[`Component <EventsDetail /> should renders correctly with different state of props 4`] = `
<div
  className="section-detail"
>
  <div
    className="panel-group accordion"
  >
    <EventsDetailPanel
      editedPanel={
        Object {
          "eventPanel": true,
        }
      }
      isBtnShowPanel={true}
      isOpen={false}
      isShowControlPanel={true}
      name="eventPanel"
      title="Edit Event - Transfer Details"
    >
      <ReduxForm
        detail={
          Object {
            "author": "bob.smith@gmail.com",
            "dateCreated": 1512564962000,
            "dateTime": 1511339400000,
            "description": "144444",
            "name": "14444",
            "source": "marand",
            "sourceId": "a7007401-837f-471c-8f73-cbb53c0eb1a1",
            "type": "Transfer",
          }
        }
      />
    </EventsDetailPanel>
  </div>
</div>
`;

exports[`Component <EventsDetail /> should renders with props correctly 1`] = `
<div
  className="section-detail"
>
  <div
    className="panel-group accordion"
  >
    <EventsDetailPanel
      editedPanel={
        Object {
          "eventPanel": false,
        }
      }
      isBtnShowPanel={true}
      isOpen={false}
      isShowControlPanel={true}
      name="eventPanel"
      onShow={[Function]}
      title="Event - Transfer Details"
    >
      <div
        className="panel-body-inner"
      >
        <div
          className="form"
        >
          <div
            className="form-group-wrapper"
          >
            <div
              className="row-expand"
            >
              <div
                className="col-expand-left"
              >
                <div
                  className="form-group"
                >
                  <label
                    className="control-label"
                  >
                    Event Name
                  </label>
                  <div
                    className="form-control-static"
                  >
                    14444
                  </div>
                </div>
              </div>
              <div
                className="col-expand-right"
              >
                <div
                  className="form-group"
                >
                  <label
                    className="control-label"
                  >
                    Event Type
                  </label>
                  <div
                    className="form-control-static"
                  >
                    Transfer
                  </div>
                </div>
              </div>
            </div>
            <div
              className="row-expand"
            >
              <div
                className="col-expand-left"
              >
                <div
                  className="form-group"
                >
                  <label
                    className="control-label"
                  >
                    Notes
                  </label>
                  <div
                    className="form-control-static"
                  >
                    144444
                  </div>
                </div>
              </div>
            </div>
            <div
              className="row-expand"
            >
              <div
                className="col-expand-left"
              >
                <div
                  className="form-group"
                >
                  <label
                    className="control-label"
                  >
                    Event Date
                  </label>
                  <div
                    className="form-control-static"
                  >
                    22-Nov-2017 10:30
                  </div>
                </div>
              </div>
              <div
                className="col-expand-right"
              >
                <div
                  className="form-group"
                >
                  <label
                    className="control-label"
                  >
                    Date
                  </label>
                  <div
                    className="form-control-static"
                  >
                    06-Dec-2017
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </EventsDetailPanel>
    <EventsDetailPanel
      editedPanel={
        Object {
          "eventPanel": false,
        }
      }
      isBtnShowPanel={true}
      isOpen={false}
      isShowControlPanel={false}
      name="metaPanel"
      onShow={[Function]}
      title="Event - Transfer Metadata"
    >
      <div
        className="panel-body-inner"
      >
        <div
          className="form"
        >
          <div
            className="form-group-wrapper"
          >
            <div
              className="row-expand"
            >
              <div
                className="col-expand-left"
              >
                <div
                  className="form-group"
                >
                  <label
                    className="control-label"
                  >
                    Author
                  </label>
                  <div
                    className="form-control-static ng-binding"
                  >
                    bob.smith@gmail.com
                  </div>
                </div>
              </div>
              <div
                className="col-expand-right"
              >
                <div
                  className="form-group"
                >
                  <label
                    className="control-label"
                  >
                    Source
                  </label>
                  <div
                    className="form-control-static ng-binding"
                  >
                    marand
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </EventsDetailPanel>
    <EventsDetailPanel
      editedPanel={
        Object {
          "eventPanel": false,
        }
      }
      isBtnShowPanel={true}
      isOpen={false}
      isShowControlPanel={false}
      name="chatPanel"
      onShow={[Function]}
      title="Chat"
    >
      <div
        className="panel-body-inner"
      >
        <div
          className="form"
        >
          <div
            className="form-group-wrapper"
          >
            <div
              className="row-expand"
            />
          </div>
        </div>
      </div>
    </EventsDetailPanel>
  </div>
</div>
`;
